# rfiletype-py

./: .gitignore  Cargo.toml  README.md  rfiletype.pyi
.github/workflows/: CI.yml
src/: lib.rs
