[package]
name = "rfiletype"
version = "0.1.4"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "infer file and MIME type by checking the magic number signature"
license = "MIT"
repository = "https://github.com/messense/rfiletype-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
infer = "0.3.7"
pyo3 = { version = "0.13.2", features = ["extension-module", "abi3-py36"] }
