[package]
name = "rfiletype"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "infer file and MIME type by checking the magic number signature"
license = "MIT"
repository = "https://github.com/messense/rfiletype-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
infer = "0.12.0"
pyo3 = { version = "0.18.0", features = ["extension-module", "abi3-py37"] }
